Added get banned list in API, backed and frontend, still not completed
